syntax = "proto3";
package pb;

service Root {
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {
    }
    rpc GetOutputs (GetOutputsRequest) returns (GetOutputsResponse) {
    }
    rpc GetBlock (GetBlockRequest) returns (GetBlockResponse) {
    }
    rpc Send (SendRequest) returns (SendResponse) {
    }
    rpc BlockHeight (EmptyRequest) returns (BlockHeightResponse) {
    }
}

message EmptyRequest {
}

message BigInt {
    string hex = 1;
}

message Input {
    bytes owner = 1;
    BigInt depositNonce = 3;
    BigInt blockNum = 4;
    BigInt txIdx = 5;
    BigInt outIdx = 6;
}

message Output {
    bytes newOwner = 1;
    BigInt amount = 2;
    BigInt depositNonce = 3;
}

message BlockHeader {
    bytes merkleRoot = 1;
    bytes rlpMerkleRoot = 2;
    bytes prevHash = 3;
    uint64 number = 4;
}

message Block {
    BlockHeader header = 1;
    bytes hash = 2;
}

message Transaction {
    Input input0 = 1;
    bytes sig0 = 2;
    Input input1 = 3;
    bytes sig1 = 4;
    Output output0 = 5;
    Output output1 = 6;
    BigInt fee = 7;
    BigInt blockNum = 8;
    BigInt txIdx = 9;
}

message ConfirmedTransaction {
    Transaction transaction = 1;
    repeated bytes signatures = 2;
}

message GetBalanceRequest {
    bytes address = 1;
}

message GetBalanceResponse {
    BigInt balance = 1;
}

message GetOutputsRequest {
    bytes address = 1;
    bool spendable = 2;
}

message GetOutputsResponse {
    repeated ConfirmedTransaction confirmedTransactions = 1;
}

message GetBlockRequest {
    uint64 number = 1;
}

message GetBlockResponse {
    Block block = 1;
    repeated ConfirmedTransaction confirmedTransactions = 2;
    BlockMeta metadata = 3;

    message BlockMeta {
        uint64 createdAt = 1;
    }
}

message SendRequest {
    ConfirmedTransaction confirmed = 1;
}

message SendResponse {
    ConfirmedTransaction confirmed = 1;
}

message BlockHeightResponse {
    uint64 height = 1;
}